# vitalsync

./: .gitignore  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yml
Configuration/: Signing.xcconfig
Vitalsync.xcodeproj/: project.pbxproj
Vitalsync.xcodeproj/xcshareddata/xcschemes/: Vitalsync.xcscheme
Vitalsync/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
Vitalsync/Resources/Vitalsync.icon/: icon.json
Vitalsync/Sources/: App.swift  HealthKitManager.swift  Schema.swift  SyncEngine.swift  TransportManager.swift
Vitalsync/SupportingFiles/: Info.plist  Vitalsync.entitlements
docs/: api_reference.html
receiver/: .env.example  Dockerfile  pyproject.toml
receiver/src/vitalsync_receiver/: __init__.py  main.py
receiver/tests/: test_vitalsync_receiver.py
scripts/: deploy-iphone.sh  run-receiver.sh
