[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vitalsync-receiver"
version = "0.1.0"
description = "Tiny local HTTP receiver for Vitalsync HealthKit data."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

